# Fide

./: CMakeLists.txt
include/: FileTreeView.hpp  MainWindow.hpp
src/: FileTreeView.cpp  MainWindow.cpp  main.cpp
